app/main/default/objects/object71__c/fields/testfield110__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>testfield110__c</fullName>
        <description>Test</description>
        <label>testfield110</label>
        <type>Url</type>
    </fields>
</CustomObject>