app/main/default/objects/object71__c/fields/testfield114__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>testfield114__c</fullName>
        <description>Test</description>
        <label>testfield114</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>